# droidlink

./: .gitignore  README.md  dev-app-update.yml  electron-builder.yml  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.web.tsbuildinfo  vite.config.ts
.github/workflows/: build.yml
.mimocode/: .cron-lock
.mimocode/plans/: 1783263073371-kind-knight.md  1783705749244-crisp-rocket.md
companion-app/: build.sh  debug.keystore  local.properties
companion-app/app/: build.gradle  proguard-rules.pro
companion-app/app/src/main/: AndroidManifest.xml
docs/: companion-app-flow.md
resources/: companion-app.apk  companion-app.apk.idsig
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adb.rs  commands.rs  lib.rs  main.rs  pairing.rs  scrcpy.rs
src/main/: index.ts
src/preload/: index.d.ts  index.ts
src/renderer/: App.vue  api.ts  env.d.ts  index.html
src/renderer/assets/: main.css
src/renderer/components/: AppFooter.vue  AppHeader.vue  AppList.vue  BaseBadge.vue  BaseButton.vue  ConfirmDialog.vue  DeviceCard.vue  DeviceList.vue  DeviceSelector.vue  Icon.vue  MacosTab.vue  PairingQr.vue  RightPanel.vue  SettingsPanel.vue
src/renderer/composables/: useApps.ts  useDevices.ts  usePairing.ts  useScrcpy.ts
src/renderer/src/: App.vue  env.d.ts
src/renderer/src/assets/: main.css
src/renderer/src/components/: AppButton.vue  AppList.vue  DeviceList.vue  PairingQr.vue  SettingsPanel.vue
(+3 files in other folders)
