[package]
name = "droidlink"
version = "1.0.0"
edition = "2021"

[lib]
name = "droidlink_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "droidlink"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.11"
base64 = "0.22"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
opt-level = "s"
